force-app/main/default/objects/Asset_Driver_Assignment__c/Asset_Driver_Assignment__c.object-meta.xml
<CustomObject>
    <label>Asset Driver Assignment</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Asset Driver Assignment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Driver Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>