force-app/main/default/objects/Asset_Driver_Assignment__c/fields/Active_Driver__c.field-meta.xml
<CustomField>
    <fullName>Active_Driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Active Driver</label>
    <referenceTo>Active_Driver__c</referenceTo>
    <relationshipLabel>Asset Driver Assignments</relationshipLabel>
    <relationshipName>Asset_Driver_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>