force-app/main/default/objects/Asset_Driver_Assignment__c/fields/Asset_Contact_Number__c.field-meta.xml
<CustomField>
    <fullName>Asset_Contact_Number__c</fullName>
    <formula>WD_Asset__r.Contact_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>For SMS Notification</inlineHelpText>
    <label>Asset Contact Number</label>
    <type>Text</type>
</CustomField>