force-app/main/default/objects/Asset_Driver_Assignment__c/fields/Driver_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assignment__c</fullName>
    <label>Driver Assignment</label>
    <referenceTo>Driver_Assignment__c</referenceTo>
    <relationshipLabel>Asset Driver Assignments</relationshipLabel>
    <relationshipName>Asset_Driver_Assignments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>