force-app/main/default/objects/Asset_Driver_Assignment__c/fields/Driver_Assignment_Active_Driver_formula__c.field-meta.xml
<CustomField>
    <fullName>Driver_Assignment_Active_Driver_formula__c</fullName>
    <formula>CASESAFEID(Driver_Assignment__r.Active_Driver__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Driver Assignment Active Driver</label>
    <type>Text</type>
</CustomField>