force-app/main/default/objects/Asset_Driver_Assignment__c/fields/is_Prime_Movers__c.field-meta.xml
<CustomField>
    <fullName>is_Prime_Movers__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Prime Movers</label>
    <type>Checkbox</type>
</CustomField>