force-app/main/default/objects/Asset_Driver_Assignment__c/fields/Odometer_Reading__c.field-meta.xml
<CustomField>
    <fullName>Odometer_Reading__c</fullName>
    <label>Odometer Reading</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>