force-app/main/default/objects/Asset_Driver_Assignment__c/fields/Owner_Id__c.field-meta.xml
<CustomField>
    <fullName>Owner_Id__c</fullName>
    <formula>CASESAFEID(Driver_Assignment__r.OwnerId)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Owner Id</label>
    <type>Text</type>
</CustomField>