force-app/main/default/objects/Asset_Driver_Assignment__c/fields/Transport_Job_Date__c.field-meta.xml
<CustomField>
    <fullName>Transport_Job_Date__c</fullName>
    <formula>Driver_Assignment__r.Transport_Job__r.Job_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Job Date</label>
    <type>Date</type>
</CustomField>