force-app/main/default/objects/Asset_Driver_Assignment__c/fields/Transport_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Transport_Job_Id__c</fullName>
    <formula>CASESAFEID(Driver_Assignment__r.Transport_Job__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transport Job Id</label>
    <type>Text</type>
</CustomField>