force-app/main/default/objects/Asset_Driver_Assignment__c/fields/WD_Asset__c.field-meta.xml
<CustomField>
    <fullName>WD_Asset__c</fullName>
    <label>WD Asset</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Asset__c.Inventory_Item__c</field>
            <operation>notEqual</operation>
            <value>Obselete</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Asset Driver Assignments</relationshipLabel>
    <relationshipName>Asset_Driver_Assignments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>